update custom note for sunset email

--- a/app/views/user_mailer/custom_note_email.html.erb
+++ b/app/views/user_mailer/custom_note_email.html.erb
@@ -5,29 +5,17 @@
   </head>
   <body style="font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;">
     <div id="main">
-      <p>Hello Optimal 401k Subscribers!</p>
+      <p>Dear friends and colleagues:</p>
 
-      <p>We've received a ton of positive feedback, and we are exiting our free pilot program in the coming months.  Please complete the 30-second survey below to help us determine the right price to charge for the service.</p>
+      <p>After much consideration, we will be shutting down Optimal 401k.  The last rebalance email will be on June 1.</p>
 
-      <%
-        url_end = "WYRV5TR";
-        user_group = User.find_by_email(@email).group
-        case user_group 
-        when 1
-          url_end = "W9NJ6MD";
-        when 2
-          url_end = "WCQKJVT";
-        when 3
-          url_end = "WCJJS95";
-        when 4
-          url_end = "WCJHP67";
-        end
-      %>
+      <p>We started Optimal 401k two years ago to help people beat the <a href="http://www.investopedia.com/terms/t/target-date_fund.asp">target-date funds</a> with just a few minutes a month.  We've had tremendous support from you all, including a lot of fantastic feedback that we used to improve the service.  Unfortunately, we just don't have the time to run the service and support our users to the high level of excellence we hold ourselves and you deserve.  And rather than compromise on quality, we've made the difficult to decision to shut the service down.</p>
 
-      <p>Link to survey: <a href="https://www.surveymonkey.com/s/<%= url_end %>"></a>https://www.surveymonkey.com/s/<%= url_end %></p>
+      <p>The next and final rebalance email will be on June 1.  Please send us any questions you may have.  We will compile an FAQ and send that out in the final email.</p>
 
-      <p>Thank you!!<br />
-      The Optimal 401k Team</p>
+      <p>We want to thank all of you who gave the service a try and sent feedback.  Your support means the world to us.</p>
+
+      <p>-- The Optimal 401k Team</p>
     </div>
   </body>
 </html>
