--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,137 +1,11 @@
-<%= render 'layouts/header_home' %>
+<script>
+	document.body.style.backgroundColor = "#F0F0F0";
+</script>
 
-<div id="poster">
-	<div id="header-background"></div>
-	<div class="content">
-		<h1 style="font-size: 290%; margin-top: 20px; margin-bottom: 27px;">Maximize the potential of your 401k!</h1>
-		<h2 style="font-size: 155%; margin-top: 10px; margin-bottom: 30px; font-weight: normal;">Invest in your Microsoft 401k with higher returns and reduced volatility.</h2>
-		<div id="poster-blurb">
-			<div id="poster-bullets" style="width: 400px; font-size: 120%; font-weight: normal; margin-bottom: -10px; float: left;">
-				<ul>
-					<li>Higher returns, reduced volatility</li>
-					<li>Tailor-made for the Microsoft 401k Plan</li>
-					<li>Just 5 minutes a month</li>
-				</ul>
-			</div>
-			<div id="poster-bullets" style="width: 400px; font-size: 120%; font-weight: normal; margin-bottom: -10px; float: left;">
-				<ul>
-					<li>We never ask for personal information</li>
-					<li>Monthly investment tips</li>
-					<li>Easy step-by-step instructions</li>
-				</ul>
-			</div>
-		</div>
-		<br />
-
-		<% if (notice =~ /SIGNUP_ERROR/) == 0 %>
-		<div class="error-div">
-			<% if notice == "SIGNUP_ERROR_EMAIL_EMPTY" %><%= "Enter your email address to sign up." %>
-			<% elsif notice == "SIGNUP_ERROR_EMAIL_INVALID" %><%= "Please enter a valid email address to sign up."%>
-			<% elsif notice == "SIGNUP_ERROR_UNKNOWN" %><%= "Something unusual happened.  We're looking into it.  Send us an email and tell us what happened: "%><a style="color: white; text-decoration: underline;" href="mailto:team@optimal401k.com">team@optimal401k.com</a>.
-			<% else %><%= "Something superbly unusual happened.  We're looking into it.  Send us an email and tell us what happened: "%><a  style="color: white; text-decoration: underline;" href="mailto:team@optimal401k.com">team@optimal401k.com</a>.
-			<% end %>
-		</div>
-		<% elsif %>
-		&nbsp;
-		<% end %>
-
-		<%= form_for (@user = User.new) do |f| %>
-		  <div class="signup-form">
-		    <%= f.email_field :email, 
-		    :id => "user_email",
-		    :class => "form-text-field",
-		    :placeholder => "enter your email",
-		    :value => params[:email] %><%= f.submit "Sign Up!", 
-		    	:class => "form-button" %>
-		  </div>
-		<% end %>
-
-		<script>
-		// PREVENT MULTIPLE FORM SUBMISSIONS
-		$("#new_user").submit(function() {
-		    $(this).submit(function() {
-		        return false;
-		    });
-		    return true;
-		});
-		</script>
-
+<div id="main-goodbye">
+	<div class="centerBox">
+		<h2>Optimal 401k Is No Longer in Operation</h2>
+		<p>Thank you for your interest.  Optimal 401k is no longer in operation.  For more information, check out our <a href="https://www.facebook.com/optimal401k">Facebook page</a>.</p>
+		<p>-- The Optimal 401k Team</p>
 	</div>
 </div>
-
-<div id="main">
-	<div class="content">
-		<div class="main-section">
-			<div class="hashanchor-special" id="why"></div>
-			<h2>Why Optimal 401k</h2>
-			<p>You're probably already contributing money into your Microsoft 401k.  If you're like most people we talked to, you set up the contribution amount a long time ago and hardly look at it, if ever!  But you can do better in just 5 minutes a month.</p>
-			<p style="font-style: italic; font-size: 80%;">P.S.  If you're not already contributing money to your 401k, you should strongly consider it to save for retirement and take advantage of the <a href="http://careers.microsoft.com/careers/en/us/benefits-and-perks.aspx">401k match benefit</a> offered by Microsoft.</p>
-			<h3>Why It Matters</h3>
-			<p>With some standard parameters<sup>*</sup>, the difference between annual returns of 5% and 6% is more than half a million dollars, which is an increase of over 25%!</p>
-			<div>
-				<img width="740" style="background-color: #FFFFFF; padding: 30px; border: 1px solid #BBBBBB;" src="assets/401kCompoundGrowth.png" alt="What a Difference 1% Makes" />
-				<br /><span style="font-style: italic; font-size: 80%;">* Parameters: starting today out of college, $100k salary, 6% contribution to 401k, and 3% yearly salary increase.</span>
-			</div>
-			<h3>Here's Where We Come In</h3>
-			<p>We help you get the most out of your 401k.  We apply proven risk management strategies utilized by complex hedge fund managers worldwide to the investment options available in the Microsoft 401k Plan.  That means you get higher returns with less volatility.  Get ready for the caviar!</p>
-		</div>
-		<div class="hashanchor" id="how"></div>
-		<div class="main-section" style="margin-top: -20px;">
-			<h2>How It Works</h2>
-			<p>You've probably heard about the difference between stocks and bonds, particularly that stocks are "riskier." Generally speaking, that is true, and that's a core part of how this works...</p>
-			<p>We measure and track market risk and adjust allocations to get higher returns with less volatility.  When market risk is high, we put more money into bonds &mdash; to protect you against a stock market crash, like in 2008.  When market risk is low, we put more money into stocks &mdash; to maximize gains when the stock market is doing well.  The extra secret sauce: we tailor fit it to the investment options available under the Microsoft 401k plan.</p>
-			<h3>What Do I Do</h3>
-			<p>It's easy!  Every month, we'll send you our recommendation for allocations in your 401k to maximize performance and minimize risk along with detailed <a href="stepbystep">step-by-step instructions</a>.  But, you don't have to give us your login information or access to your hard-earned cash.  You log in and rebalance your 401k by yourself so you're always 100% in control.</p>
-			<div class="two-column-div two-column-margin">
-				<img style="background-color: #FFFFFF; padding: 32px 20px 20px 20px; border: 1px solid #BBBBBB;" src="assets/Rebalance.png" alt="Rebalance" />
-				<br /><span style="font-style: italic; font-size: 80%;">Rebalance</span>
-			</div>
-			<div class="two-column-div">
-				<img style="background-color: #FFFFFF; padding: 20px 30px 30px 30px; border: 1px solid #BBBBBB;" width="315" src="assets/EnterPercentages.png" alt="Enter Percentages" />
-				<br /><span style="font-style: italic; font-size: 80%;">Enter Percentages</span>
-			</div>
-			<div class="clear-div"></div>
-		</div>
-		<div class="hashanchor" id="returns"></div>
-		<div class="main-section">
-			<h2>Our Returns</h2>
-			<p>Check out our returns against five other common investment strategies, both when the dot-com bubble burst in early 2000 and the crash of 2008.  Because we allocate funds dynamically to safer investments during periods of high volatility, we are able to protect against huge dips.<sup>**</sup></p>
-			<img width="740" style="background-color: #FFFFFF; padding: 30px; border: 1px solid #BBBBBB;" src="assets/OurReturns.png" alt="Our Returns" />
-			<br />
-			<span style="font-style: italic; font-size: 80%;">
-				** Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by Optimal 401k will be profitable.<br /><br />
-				<strong>Optimal 401k (Conservative):</strong> our conservative strategy.<br />
-				<strong>Optimal 401k (Aggressive):</strong> our aggressive strategy.<br />
-				<strong>S&amp;P 500:</strong> Standard &amp; Poor's 500 index, which approximates "the stock market."<br />
-				<strong>60/40 (Stocks/Bonds):</strong> monthly rebalancing to 60% stocks and 40% bonds.<br />
-				<strong>BTC LifePath 2040:</strong> BlackRock fund claiming to optimize for investors planning to retire around the year 2040.<br />
-				<strong>MSFT:</strong> the Microsoft common stock.
-			</span>
-		</div>
-		<div class="hashanchor" id="vision"></div>
-		<div class="main-section">
-			<h2>Vision</h2>
-			<p>We started Optimal 401k because we couldn’t find a decent way to invest our own money. We are setting out to build a product that we want first, and we think it will help our friends and coworkers.</p>
-			<p>We believe in an alternate and better way of investing money in our 401k. We believe risk should be measured and controlled ensuring that we hold the optimal amount of stocks (volatile!) and bonds (stable) depending on market conditions.  And, of course, we use it ourselves.</p>
-		</div>
-		<div class="hashanchor" id="who"></div>
-		<div class="main-section">
-			<div class="three-column-div three-column-margin">
-			<div><img style="border: 1px solid #BBBBBB;" src="assets/VestMe-Joe.jpg" alt="Joe" /></div>
-				<p>Joe Ollis is a former Microsoft employee, and he's passionate about investment.  He has 3 kids and a playground in his backyard that rivals any public park.</p>
-			</div>
-			<div class="three-column-div three-column-margin">
-			<div><img style="border: 1px solid #BBBBBB;" src="assets/VestMe-Gary.jpg" alt="Gary" /></div>
-				<p>Gary Voronel is also a former Microsoftie and a web development nerd.  He'll also talk your ear off about the benefits of a primarily plant-based diet.</p>
-			</div>
-			<div class="three-column-div">
-			<div><img style="border: 1px solid #BBBBBB;" src="assets/VestMe-Xavier.jpg" alt="Xavier" /></div>
-				<p>Xavier Bengoechea is an investment guru.  He is a CFA&reg; charter holder with more than 10 years of experience building financial models.</p>
-			</div>
-			<div class="clear-div"></div>
-		</div>
-	</div>
-
-    <%= render 'layouts/footer' %>
-</div>
-
