--- a/app/views/user_mailer/regular_monthly_email.html.erb
+++ b/app/views/user_mailer/regular_monthly_email.html.erb
@@ -7,8 +7,23 @@
   <body style="font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;">
     <div id="main">
       <div>
-        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;"><%= Date::MONTHNAMES[current_time.month] + " " + current_time.year.to_s %> Rebalance</h3>
-        <p>Here are this month's allocations.  You should complete this rebalance as soon as you can using our <a href="http://www.optimal401k.com/stepbystep">step-by-step instructions</a>.  If you are switching between the Conservative and Aggressive strategies, we recommend skipping one month to prevent a possible <a href="http://optimal401k.com/faq#question-11">round trip warning</a>.  Questions? Check out the <a href="http://www.optimal401k.com/faq">FAQ</a> or drop us a line: <a href="mailto:team@optimal401k.com">team@optimal401k.com</a>.</p>
+        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Optimal 401k - Parting Words and Final Rebalance (June 2015)</h3>
+        
+        <p>Hello Optimal 401k Subscribers:<p>
+
+        <p>As we wrote last month, we are shutting down the Optimal 401k service.  This is our final email.  Thank you to those who wrote in with questions and kind words -- it was so great to receive your support!</p>
+
+        <p>We received many requests for assistance on what to do going forward.  We don't want to endorse any specific service, but there are a number of <a href="http://en.wikipedia.org/wiki/Robo-Advisor">Robo-Advisors</a> that are gaining popularity, and some of them do offer 401k management.  Here is a <a href="http://www.nerdwallet.com/blog/investing/online-advisor-comparison/">comparison</a> of some of the more popular ones.  Also, there are some services that are sponsored by Microsoft that you can find on the Fidelity 401k website.  Lastly, if we can leave you with some wisdom, remember the fundamentals of our approach:</p>
+
+        <p>1. <a href="http://en.wikipedia.org/wiki/Asset_allocation">Allocate Across Asset Classes</a>: don't put all your nest-eggs in one basket.  There are lots of free tools out there that can help you come up with an allocation that is good for your needs (including one sponsored by Microsoft on the Fidelity site).  With a little bit of reading on the Fidelity site, you can find investment options that fit the major asset classes.  And to get you started, remember that the funds we chose were in four major classes: Large Cap Domestic Stocks, Small/Mid Cap Domestic Stocks, International Stocks, Bonds.</p>
+
+        <p>2. <a href="http://en.wikipedia.org/wiki/Management_fee">Don't Forget the Fees</a>: remember that funds with high <a href="http://en.wikipedia.org/wiki/Expense_ratio">expense ratios</a> are basically starting from farther behind and have to make up more ground to make you money.  (And don't forget the power of 1% and compounding interest -- it makes a difference!)</p>
+
+        <p>3. Be Active: we hope that by using our service, you have at least gained some confidence in going in and adjusting some of the knobs.  Keep going!  Log in every once in a while.  Talk to friends.  Read online.  You can do it!!</p>
+
+        <p>Here are final allocations.  Thank you again for all your support.</p>
+
+        <p>-- The Optimal 401k Team</p>
 
         <%= render 'layouts/allocations' %>
 
