--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -321,4 +321,7 @@ a:hover, a:active {
 	margin: -90px 0 0 -300px;
 	padding: 0px 25px;
 	font-size: 90%;
+	border: 1px solid;
+	border-color: #e5e6e9 #dfe0e4 #d0d1d5;
+	-webkit-border-radius: 3px;
 }
